--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,8 @@ ipykernel
 peft
 bitsandbytes
 gradio<5.16.0
-# Constrain spacy version to avoid blis build issues on ARM64. 
-# spaCy is a free, open-source Python library designed for advanced Natural Language Processing (NLP). It is built for production use, enabling users to process and understand large volumes of text efficiently. 
+# Constrain spacy version to avoid blis build issues on ARM64.
+# spaCy is a free, open-source Python library designed for advanced Natural Language Processing (NLP). It is built for production use, enabling users to process and understand large volumes of text efficiently.
 spacy<3.8.0
 cerebras_cloud_sdk
 outlines[transformers]>=1.2.3
@@ -41,3 +41,29 @@ math_verify
 google-auth     # Required to invoke Google model using LiteLLM. To fix - ModuleNotFoundError: No module named 'google.auth' error
 google-cloud-aiplatform # Required to invoke Google Gemma model using LiteLLM / Vertex AI route.
 google.genai # This is required if script is using Google ADK to invoke Gemini model
+
+# Core LLM and inference dependencies
+torch>=2.0.0
+transformers>=4.36.0
+bitsandbytes>=0.41.0
+accelerate>=0.25.0
+
+# Data processing
+numpy>=1.24.0
+pandas>=2.0.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Metrics and evaluation
+scikit-learn>=1.3.0
+scipy>=1.10.0
+
+# CLI and file handling
+tqdm>=4.66.0
+click>=8.1.0
+
+# Optional: for reproducibility and logging
+python-dotenv>=1.0.0
+loguru>=0.7.0
